force-app/main/default/objects/Account/fields/Is_Gold__c.field-meta.xml
<CustomField>
    <fullName>Is_Gold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark the field true when the customer clas if Gold for the first time.</description>
    <label>Is Gold</label>
    <type>Checkbox</type>
</CustomField>