force-app/main/default/objects/Account/fields/Total_Customer_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Spend__c</fullName>
    <description>Calculating the sum of Closed-Won Opportunities</description>
    <label>Total Customer Spend</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>