force-app/main/default/objects/Account/fields/TotalCustomerSpend__c.field-meta.xml
<CustomField>
    <fullName>TotalCustomerSpend__c</fullName>
    <description>Calculating the total customer spend from last 12 months closed-won opportunities.</description>
    <label>Total Customer Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>